--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^6.1.9",
     "@mui/styles": "^6.1.4",
     "@mui/system": "^6.1.6",
+    "@mui/utils": "^6.1.9",
+    "@mui/x-data-grid": "^7.22.3",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.5",
     "@testing-library/jest-dom": "^5.17.0",
